<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockQuotes1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fresh">刷新</string>
    <string name="stockname">\t 股票</string>
    <string name="stockprice">现价</string>
    <string name="interest">\t盈亏</string>
    <string name="add">添加</string>
    <string name="cost">每股成本</string>
    <string name="amount">持有股数</string>
    <string name="stockid">股票代码</string>
    <string name="del">删除</string>

</resources>
